# mold-llvm-cov-issue-demo

./: CMakeLists.txt  README.md  main.cc
include/: dummy.h
src/: dummy.cc
